--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "async": "2.5.x",
     "unit.js": "^2.0.0"
   },
-  “devDependencies”: {
-    “mocha”: “1.20.1”
+  "devDependencies": {
+    "mocha": "1.20.1"
   },
   "scripts": {
     "start": "node app.js"
