--- a/appspec.yml
+++ b/appspec.yml
@@ -5,10 +5,10 @@ files:
     destination: /var/api/
 hooks:
   AfterInstall:
-    - location: npm-install.sh
+    - location: scripts/npm-install.sh
       runas: root
       timeout: 300
   ApplicationStart:
-    - location: npm-start.sh
+    - location: scripts/npm-start.sh
       runas: root
       timeout: 60
